# ae_stm32_display_ui

./: AERM_v1.0.X.cbp  AERM_v1.0.X.layout  CMakeLists.txt  CMakePresets.json  Makefile  README.md  STM32F103XC_FLASH.ld  main.cpp  noexptoken.txt  readme.odt  source.cpp  ssh_key  ssh_key.pub  test-g474.lss_0  test-g474.lss_1
.deps/: system_stm32f10x.o.d
Src/: main.c  pictures.h
Src/Img/: test.h  Картинко.c  Картинко.h  Картинко.xcf
Src/Linker/: Makefile  STM32F100XB_FLASH.ld
Src/include/: FONT_A.h  Glyph.h  Label.h  SPI_Connection.h  ScreenControl.h
cmake/: arm_none_eabi.cmake
driver/CMSIS/: CMakeLists.txt
driver/CMSIS/Device/ST/STM32G4xx/Source/Templates/: system_stm32g4xx.c
driver/legacy/CMSIS/Device/ST/STM32G4xx/Include/: stm32g4xx.h
include/: CMakeLists.txt  Canvas.h  Encoder.h  FONT_A.h  Font.h  Glyph.h  GraphicsManager.h  Hardware.h  Label.h  Parameter.h  ParameterManager.h  SPI_Connection.h  ScreenControl.h  dummy_font.h  gpio.h  spi.h  ssd1322.h  uart.h  value.h  zero_font.h
include/classes/: Canvas.h  Context.h  Parameter.h
include/core/: CMakeLists.txt  font.h  graphics.h  text.h
include/core/resources/: font_zero.h
include/core/resources/src/: font_zero.cpp
include/core/src/: graphics.cpp
include/hardware/: CMakeLists.txt  beeper.h  button.h  encoder.h  exti.h  gpio.h  hardware.h  led.h  spi.h  ssd1322.h  uart.h
include/hardware/src/: button.cpp  encoder.cpp  exti.cpp  gpio.cpp  hardware.cpp  led.cpp  spi.cpp  ssd1322.cpp
